# thermal-printer-photo-booth

./: README.md  main.py  stack.yaml  thermal-printer-photo-booth.cabal  thermal-printer.cabal
src/: ImageProcessing.hs  Main.hs  Printer.hs
test/: ImageProcessingTests.hs  PrinterTests.hs  Spec.hs
