name:                thermal-printer-photo-booth
version:             1.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable thermal-printer-photo-booth-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,JuicyPixels,JuicyPixels-extra,serialport,bytestring
  default-language:    Haskell2010
  other-modules:       ImageProcessing,Printer

test-suite thermal-printer-photo-booth-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test,src
  main-is:             Spec.hs
  build-depends:       base,QuickCheck,HUnit,JuicyPixels,JuicyPixels-extra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Printer,PrinterTests,ImageProcessing,ImageProcessingTests
